<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="sports">Sports</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="arts">Arts</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">Begin Date</string>
    <string name="enter_date">Enter a Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
