<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.anthonysherbondy.nytimessearch.fragments.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/begin_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvBeginDateLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_date"
        android:id="@+id/tvBeginDate"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/news_desk_values"
        android:id="@+id/tvNewsDesk"
        android:layout_marginTop="@dimen/margin_settings_item"
        android:layout_below="@+id/tvBeginDateLabel"/>

    <CheckBox
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_height="wrap_content"
        android:checked="false" />

    <CheckBox
        android:text="@string/fashion_and_style"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <CheckBox
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="@dimen/margin_settings_item"
        android:id="@+id/tvSortOrder"
        android:text="@string/sort_order"
        android:layout_below="@+id/cbSports"/>

    <Spinner
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignTop="@+id/tvSortOrder"
        android:id="@+id/spSortOrder"
        android:entries="@array/sort_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_marginTop="@dimen/margin_settings_item"
        android:layout_below="@+id/tvSortOrder"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
