<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anthonysherbondy.nytimessearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/begin_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:layout_below="@+id/etBeginDate"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginTop="105dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/news_desk_values"
        android:id="@+id/tvNewsDesk"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder" />


    <EditText
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_date"
        android:id="@+id/etBeginDate"
        android:onClick="onEditBeginDate"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Spinner
        android:layout_alignStart="@+id/etBeginDate"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignTop="@+id/tvSortOrder"
        android:id="@+id/spSortOrder"
        android:entries="@array/sort_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:layout_alignStart="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBeginDate"
        android:checked="false" />

    <CheckBox
        android:text="@string/fashion_and_style"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignStart="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <CheckBox
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignStart="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:onClick="onSave"
        android:layout_below="@+id/cbSports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />
</RelativeLayout>
